<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
    android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:text="회원정보"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/phonenNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phonenumber"
            android:inputType="phone" />

        <EditText
            android:id="@+id/birthDayEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/birth"
            android:inputType="date" />

        <EditText
            android:id="@+id/nickNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nickname"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/checkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/저장" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/logout" />

    </LinearLayout>

</LinearLayout>